# local-clip-studio-v1

./: .env.example  .gitignore  ARCHITECTURE_TRIAGE.md  Makefile  PROJECT_FULL_AUDIT_REPORT.md  PROJECT_REAUDIT.md  README.md  SPRINT_4_6_A4_DESIGN_REVIEW.md  SPRINT_4_6_A4_EXECUTION_PLAN.md  SPRINT_4_6_A4_IMPLEMENTATION_CONTRACT.md  SPRINT_4_6_A4_IMPLEMENTATION_SPEC.md  STABILIZATION_BACKLOG.md  pyproject.toml
.venv_test/: pyvenv.cfg
backend/: __init__.py  __main__.py  main.py
backend/api/: __init__.py  app.py  deps.py  middleware.py
backend/api/routes/: __init__.py  projects.py  settings.py  system.py  videos.py
backend/config/: __init__.py  defaults.py  encryption.py  settings.py
backend/domain/: __init__.py  events.py  exceptions.py  state_machines.py  value_objects.py
backend/domain/aggregates/: __init__.py  project_aggregate.py
backend/domain/entities/: __init__.py  analysis.py  caption.py  clip.py  export.py  plugin.py  project.py  provider.py  video.py
backend/infrastructure/: __init__.py
backend/infrastructure/database/: base.py  engine.py
backend/infrastructure/database/models/: __init__.py  analysis.py  caption_track.py  clip_candidate.py  processing_queue.py  project_video.py  provider_config.py  timeline_state.py
backend/infrastructure/database/repositories/: __init__.py  analysis_repo.py  base.py  caption_repo.py  clip_repo.py  exceptions.py  export_repo.py  mappers.py  model_registry_repo.py  plugin_repo.py  project_repo.py  provider_repo.py  settings_repo.py  video_repo.py
backend/infrastructure/errors/: __init__.py  app_error.py
backend/infrastructure/ffmpeg/: __init__.py  command.py  escape.py  manager.py
backend/infrastructure/filesystem/: __init__.py  backup_manager.py  cache_manager.py  cleanup_scheduler.py  directory_manager.py  export_manager.py  file_manager.py  model_manager.py  proxy_manager.py  storage_manager.py  temp_manager.py
backend/infrastructure/hal/: __init__.py  backend_selector.py  base.py  capability_detector.py  device_detector.py  inference_session.py  memory_manager.py  model_loader.py  performance_profiler.py  tensor_allocator.py  types.py
backend/infrastructure/hal/providers/: __init__.py  base.py  cpu_provider.py  cuda_provider.py  metal_provider.py  rocm_provider.py
backend/infrastructure/logging/: __init__.py  correlation.py  logger.py
backend/infrastructure/plugins/: health.py  loader.py
backend/infrastructure/plugins/builtins/whisperx_stt/: manifest.json  whisperx_stt.py
backend/infrastructure/queue/: __init__.py  cancellation.py  celery_app.py  dispatcher.py  events.py  exceptions.py  health.py  metrics.py  models.py  priority.py  progress.py  retry.py  scheduler.py  task_registry.py  worker.py
backend/infrastructure/websocket/: event_bus.py
backend/services/: __init__.py  import_service.py  plugin_service.py  project_service.py  provider_service.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: IMPLEMENTATION_PLAN.md  PRD.md
docs/api/: API_SPECIFICATION.md
docs/architecture/: ARCHITECTURE_BLUEPRINT.md  Foundation-Audit-Report.md  Module-A5-Completion-Report.md  Module-B1-Completion-Report.md  Module-B2-Completion-Report.md
docs/architecture/adr/: ADR-001-react-frontend.md  ADR-002-fastapi-backend.md  ADR-003-sqlite.md  ADR-004-sqlalchemy.md  ADR-005-rest-api.md  ADR-006-websocket.md  ADR-007-plugin-system.md  ADR-008-hardware-abstraction.md  ADR-009-local-first.md  ADR-010-storage-layout.md  ADR-011-ai-provider-abstraction.md  ADR-012-background-job-queue.md  ADR-013-ffmpeg-integration.md  ADR-014-no-authentication.md  ADR-015-domain-driven-design.md  ADR-016-cqrs-pattern.md  INDEX.md
docs/database/: DATABASE_DESIGN.md
docs/vision/: VISION_DOCUMENT.md
isolate/: index.html
isolate/assets/: Auth-C3NHG9xn.js  Landing-DXOeNaqR.js  index-BTush8p4.js
scripts/: dev.sh  download_models.sh  setup.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_database.py
tests/integration/database/: test_repositories.py
tests/integration/hal/: __init__.py  test_hal_integration.py
tests/integration/plugins/: test_plugin_integration.py
tests/integration/queue/: test_queue_integration.py
tests/unit/: __init__.py  test_config.py  test_database.py  test_encryption.py  test_errors.py  test_filesystem.py  test_logging.py
tests/unit/api/: test_api_routes.py  test_app_factory.py
tests/unit/database/: __init__.py  test_repositories.py
tests/unit/domain/: __init__.py  test_aggregate.py  test_analysis.py  test_caption.py  test_clip.py  test_events.py  test_exceptions.py  test_export.py  test_plugin.py  test_project.py  test_provider.py  test_state_machines.py  test_value_objects.py  test_video.py
tests/unit/ffmpeg/: test_command.py  test_escape.py
tests/unit/hal/: __init__.py  test_hal.py  test_providers.py
tests/unit/plugins/: test_cache.py  test_discovery.py  test_errors.py  test_health.py  test_interfaces.py  test_lifecycle.py  test_loader.py  test_manager.py  test_manifest.py  test_registry.py  test_resolver.py  test_sandbox.py  test_types.py  test_validator.py
tests/unit/queue/: test_cancellation.py  test_celery_app.py  test_dispatcher.py  test_events.py  test_exceptions.py  test_health.py  test_metrics.py  test_models.py  test_priority.py  test_progress.py  test_retry.py  test_scheduler.py  test_worker.py
tests/unit/services/: test_import_service.py  test_plugin_service.py  test_project_service.py
