[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-clip-studio"
version = "1.0.0"
description = "Local-first AI-powered video editing application"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Local Clip Studio Team"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "cryptography>=41.0.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.26.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.4.0",
]
ai = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "onnxruntime-gpu>=1.16.0",
    "whisper-x>=0.1.0",
    "pyannote.audio>=3.1.0",
    "pyscenedetect>=1.0.0",
    "ultralytics>=8.0.0",
    "llama-cpp-python>=0.2.0",
    "sentence-transformers>=2.2.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
# GPU extras: Install PyTorch with the appropriate CUDA/ROCm index URL:
# CUDA: pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
# ROCm: pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm5.6
gpu-cuda = [
    "torch>=2.1.0",
]
gpu-rocm = [
    "torch>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["backend", "tests"]
include = ["backend*", "tests*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
    "migrations/",
    "tests/",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "EM", "PD", "PLC", "PLE", "RUF"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "SIM114",  # combine if statements
]

[tool.ruff.format]
quote-style = "double"
indent-width = 4

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks end-to-end tests (deselect with '-m \"not e2e\"')",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[project.scripts]
localclip = "backend.__main__:main"
