[project]
name = "local-clip-studio"
version = "1.0.0"
description = "Local-first, AI-powered video editing application"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Local Clip Studio" },
]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "python-multipart>=0.0.6,<1.0",
    "structlog>=24.1,<25.0",
    "cryptography>=42.0,<43.0",
    "httpx>=0.26,<1.0",
    "aiofiles>=23.2,<24.0",
    "celery>=5.3,<6.0",
    "redis>=5.0,<6.0",
    "jinja2>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-benchmark>=4.0,<5.0",
    "factory-boy>=3.3,<4.0",
    "freezegun>=1.4,<2.0",
    "ruff>=0.2,<1.0",
    "mypy>=1.8,<2.0",
    "pre-commit>=3.6,<4.0",
    "pytest-httpx>=0.30,<1.0",
]
ai = [
    "torch>=2.1,<3.0",
    "whisper-x>=0.1,<1.0",
    "ultralytics>=8.0,<9.0",
    "pyscenedetect>=1.0,<2.0",
    "llama-cpp-python>=0.2,<1.0",
    "sentence-transformers>=2.2,<3.0",
    "pyannote-audio>=3.1,<4.0",
    "onnxruntime-gpu>=1.17,<2.0",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["backend*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "gpu: marks tests that require GPU hardware",
    "slow: marks tests that take >10 seconds",
    "integration: marks integration tests that require external services",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "backend/infrastructure/database/migrations/",
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "backend.infrastructure.database.models.*",
    "backend.infrastructure.database.repositories.*",
]
disable_error_code = ["attr-defined", "arg-type"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "SIM", "ARG", "PTH", "ERA", "PD"]
ignore = ["D100", "D104", "D107", "D203", "D212", "D401", "D415", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ARG"]
"backend/infrastructure/database/migrations/**" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
